scaffolded the profile component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,6 +11,12 @@
           <li><a routerLink="/movies" id="Upcoming_Movies" (click)="changeCategory($event)">Upcoming Movies</a></li>
           <li><a routerLink="/movies" id="Now_Playing_Movies" (click)="changeCategory($event)">Now Playing Movies</a></li>
         </ul>
+        <ul class="nav navbar-nav navbar-right" style="margin-right: 20px">
+          <li><button routerLink="/profile" type="button" class="btn btn-default">
+            <span class="glyphicon glyphicon-user"></span>
+          </button>
+        </li>
+        </ul>
       </div>
   </div>
 </nav>
