--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,10 @@
-<p>
-  profile works!
-</p>
+<div class="row row-header">
+  <div class="col-sm-3"><p class="header-item" [routerLink]="['watchlists']">Watchlists</p></div>
+  <div class="col-sm-3"><p class="header-item" [routerLink]="['favorites']">Favorites</p></div>
+  <div class="col-sm-3"><p class="header-item" [routerLink]="['all-lists']">All Lists</p></div>
+  <div class="col-sm-3"><p class="header-item" [routerLink]="['ratings']">Ratings &amp; Reviews</p></div>
+</div>
+<hr class="line">
+<router-outlet></router-outlet>
+
+
