Added  all  lists  component

--- a/src/app/profile/all-lists/all-lists.component.html
+++ b/src/app/profile/all-lists/all-lists.component.html
@@ -1,3 +1,15 @@
-<p>
-  all-lists works!
-</p>
+<div class="container">
+    <div class="MovieListContent">
+      <div class="Title">
+        <h2>My Movie Lists</h2>
+      </div>
+      <div *ngFor="let list of movieLists"  class=" img-container"
+       [ngStyle]="{background: ' linear-gradient(rgba(0%, 0%, 0%, 0.7), rgba(0%, 0%, 0%, 0.7)), url(https://image.tmdb.org/t/p/w500_and_h282_face' + list?.movieToMovieCollections[0].movie.backdropURL + ')'}">
+
+       <div class="collection-info">
+          <p class="collection-title">{{list?.name}}</p>
+          <p class="collection-count">{{list?.movieToMovieCollections.length}} movies in collection</p>
+       </div>
+      </div>
+    </div>
+  </div>
