--- a/src/app/profile/favorites/favorites.component.css
+++ b/src/app/profile/favorites/favorites.component.css
@@ -8,6 +8,12 @@
    0 6px 20px 0 rgba(0, 0, 0, 0.05);
 }
 
+.header {
+  font-family: 'Comfortaa', cursive;
+  margin-bottom: 60px;
+}
+
+
 .movieImg {
 
   min-height: 325;
