--- a/src/app/profile/watchlist/watchlist.component.css
+++ b/src/app/profile/watchlist/watchlist.component.css
@@ -13,6 +13,11 @@
   min-height: 325;
 }
 
+.header {
+  font-family: 'Comfortaa', cursive;
+  margin-bottom: 20px;
+}
+
 .responsive {
   width: 100%;
   height: auto;
