--- a/src/app/profile/watchlist/watchlist.component.html
+++ b/src/app/profile/watchlist/watchlist.component.html
@@ -1,4 +1,9 @@
 <div class="container">
+    <div class="header">
+        <h2 class="title">
+          My Watchlist
+        </h2>
+      </div>
   <div *ngFor="let movie of watchlist?.movieToMovieCollections" class="movie-wrapper">
     <div class="outlinedDiv">
       <div class="row">
