--- a/src/app/profile/favorites/favorites.component.html
+++ b/src/app/profile/favorites/favorites.component.html
@@ -1,4 +1,9 @@
 <div class="container">
+<div class="header">
+  <h2 class="title">
+    My Favorites
+  </h2>
+</div>
 <div *ngFor="let movie of favorites?.movieToMovieCollections" class="movie-wrapper">
   <div class="outlinedDiv">
     <div class="row">
@@ -8,7 +13,7 @@
             [alt]="movie.movie.title"/>
 
       </div>
-      <div class="col-xs-8">
+      <div class="col-xs-7">
         <div class="movie-body-wrapper">
             <h4 class="movieTitle">{{movie.movie.title === undefined ? '' : movie.movie.title}}</h4>
             <p class="releaseDate">{{movie.movie.releaseDate | date:'longDate'}}</p>
@@ -22,6 +27,9 @@
 
         </div>
 
+      </div>
+      <div class="col-xs-1">
+        <p style="float: right;"> sfdf </p>
       </div>
     </div>
   </div>
