--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -17,18 +17,18 @@
       <div class="save-actions">
 
         <div class="glyphicon-ring"><span id="list" class="glyphicon glyphicon-list glyphicon-bordered" (click)="showCollections()"></span></div>
-        <div class="glyphicon-ring"><span id="favorite" class="glyphicon glyphicon-heart glyphicon-bordered" (click)="addToFavorites()"></span></div>
-        <div class="glyphicon-ring"><span id="bookmark" class="glyphicon glyphicon-bookmark glyphicon-bordered" (click)="addToWatchlist()"></span></div>
+        <div class="glyphicon-ring"><span id="favorite" [ngClass]="{'favorite': isFavorite}"  class="glyphicon glyphicon-heart glyphicon-bordered" (click)="ToggleToFavorites()"></span></div>
+        <div class="glyphicon-ring"><span id="bookmark" [ngClass]="{'bookmark': isWatchlisted}"  class="glyphicon glyphicon-bookmark glyphicon-bordered" (click)="ToggleToWatchlist()"></span></div>
           <div (click)="showRatings = true" class="glyphicon-ring">
-            <span #myDiv id="rate" class="glyphicon glyphicon-star glyphicon-bordered"></span>
+            <span #openRatingsElement id="rate" [ngClass]="{'filled': isRated}"  class="glyphicon glyphicon-star glyphicon-bordered"></span>
           </div>
 
-        <div  *ngIf="showRatings" (clickOut)="closeRatings()" [allowedClick]="myDiv" class="rating-options">
-            <span id="star5" class="glyphicon glyphicon-star glyphicon-bordered star"></span>
-            <span id="star4" class="glyphicon glyphicon-star glyphicon-bordered star"></span>
-            <span id="star3" class="glyphicon glyphicon-star glyphicon-bordered star"></span>
-            <span id="star2" class="glyphicon glyphicon-star glyphicon-bordered star"></span>
-            <span id="star1" class="glyphicon glyphicon-star glyphicon-bordered star"></span>
+        <div  *ngIf="showRatings" (clickOut)="closeRatings()" [allowedClick]="openRatingsElement" class="rating-options">
+            <span (click)="applyRating(5)" id="star5" [ngClass]="{filled: starRatings[4]}" class="glyphicon glyphicon-star glyphicon-bordered star"></span>
+            <span (click)="applyRating(4)" id="star4" [ngClass]="{filled: starRatings[3]}"  class="glyphicon glyphicon-star glyphicon-bordered star"></span>
+            <span (click)="applyRating(3)" id="star3" [ngClass]="{filled: starRatings[2]}"  class="glyphicon glyphicon-star glyphicon-bordered star"></span>
+            <span (click)="applyRating(2)" id="star2" [ngClass]="{filled: starRatings[1]}" class="glyphicon glyphicon-star glyphicon-bordered star"></span>
+            <span (click)="applyRating(1)" id="star1" [ngClass]="{filled: starRatings[0]}" class="glyphicon glyphicon-star glyphicon-bordered star"></span>
         </div>
         <div *ngIf="displayPopup" [ngClass]="{'alert': true, 'alert-success': success, 'alert-danger': !success}" style="width: 280px; margin-top: 25px; margin-left: 70px;" role="alert"><p class="text-center">{{success === true ? 'Successfly added!' : 'Oops, something went wrong. Try later.'}}</p></div>
       </div>
