--- a/src/app/movie-detail/movie-detail.component.css
+++ b/src/app/movie-detail/movie-detail.component.css
@@ -124,6 +124,7 @@
 }
 
 .rating-options {
+  position: absolute;
   margin-top: 20px;
   height: 58px;
   background-color: rgba(184, 183, 183, .2);
@@ -146,3 +147,36 @@
    color:  rgb(221, 201, 24);
 }
 
+.collection-box {
+  position: absolute;
+  width: 370px;
+  height: 100px;
+  background-color: #73AD21;
+  border-radius: 5px;
+  margin-top: 20px;
+}
+
+.list-header {
+  text-align: center;
+  color: white;
+  margin-bottom: 25px;
+}
+
+.collections-select {
+  display: inline-block;
+  width: 250px;
+  margin-left: 25px;
+  margin-right: 20px;
+  font-family: 'Lato', sans-serif;
+}
+
+.alert {
+  position: absolute;
+  width: 280px;
+  margin-top: 25px;
+  margin-left: 70px;
+  display: inline-block;
+}
+
+.list-header > button {
+}
