--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -16,21 +16,32 @@
 
       <div class="save-actions">
 
-        <div class="glyphicon-ring"><span id="list" class="glyphicon glyphicon-list glyphicon-bordered" (click)="showCollections()"></span></div>
+        <div (click)="showCollections = true"  class="glyphicon-ring">
+          <span #openCollectionsElement id="list" class="glyphicon glyphicon-list glyphicon-bordered"></span >
+        </div>
         <div class="glyphicon-ring"><span id="favorite" [ngClass]="{'favorite': isFavorite}"  class="glyphicon glyphicon-heart glyphicon-bordered" (click)="ToggleToFavorites()"></span></div>
         <div class="glyphicon-ring"><span id="bookmark" [ngClass]="{'bookmark': isWatchlisted}"  class="glyphicon glyphicon-bookmark glyphicon-bordered" (click)="ToggleToWatchlist()"></span></div>
-          <div (click)="showRatings = true" class="glyphicon-ring">
-            <span #openRatingsElement id="rate" [ngClass]="{'filled': isRated}"  class="glyphicon glyphicon-star glyphicon-bordered"></span>
-          </div>
+        <div (click)="showRatings = true" class="glyphicon-ring">
+          <span #openRatingsElement id="rate" [ngClass]="{'filled': isRated}"  class="glyphicon glyphicon-star glyphicon-bordered"></span>
+        </div>
 
-        <div  *ngIf="showRatings" (clickOut)="closeRatings()" [allowedClick]="openRatingsElement" class="rating-options">
+        <div *ngIf="showCollections" (clickOut)="showCollections = false" [allowedClick]="openCollectionsElement" class="collection-box" >
+          <h4 class="list-header">Add to list</h4>
+          <div>
+            <select [(ngModel)]="selectedCollection" class="form-control collections-select">
+              <option *ngFor="let collection of collections" [ngValue]="collection">{{collection.name}}</option>
+            </select>
+            <button (click)="addToCollection()" class="btn-primary btn">add</button>
+          </div>
+        </div>
+
+        <div *ngIf="showRatings" (clickOut)="showRatings = false" [allowedClick]="openRatingsElement" class="rating-options">
             <span (click)="applyRating(5)" id="star5" [ngClass]="{filled: starRatings[4]}" class="glyphicon glyphicon-star glyphicon-bordered star"></span>
             <span (click)="applyRating(4)" id="star4" [ngClass]="{filled: starRatings[3]}"  class="glyphicon glyphicon-star glyphicon-bordered star"></span>
             <span (click)="applyRating(3)" id="star3" [ngClass]="{filled: starRatings[2]}"  class="glyphicon glyphicon-star glyphicon-bordered star"></span>
             <span (click)="applyRating(2)" id="star2" [ngClass]="{filled: starRatings[1]}" class="glyphicon glyphicon-star glyphicon-bordered star"></span>
             <span (click)="applyRating(1)" id="star1" [ngClass]="{filled: starRatings[0]}" class="glyphicon glyphicon-star glyphicon-bordered star"></span>
         </div>
-        <div *ngIf="displayPopup" [ngClass]="{'alert': true, 'alert-success': success, 'alert-danger': !success}" style="width: 280px; margin-top: 25px; margin-left: 70px;" role="alert"><p class="text-center">{{success === true ? 'Successfly added!' : 'Oops, something went wrong. Try later.'}}</p></div>
       </div>
 
       <div class="overview-section">
@@ -44,8 +55,8 @@
 
     <div class="col-md-3">
 
+      <div *ngIf="displayPopup" [ngClass]="{'alert': true, 'alert-success': success, 'alert-danger': !success}" role="alert"><p class="text-center">{{success === true ? 'Success!' : 'Oops, something went wrong. Try later.'}}</p></div>
         <div class="movie-metadata">
-
           <div class="row release-date">
             <div class="col-md-6">Release Date:</div>
             <div class="col-md-6"><span class="label label-success">{{movie.release_date | date:'longDate'}}</span></div>
