Modified removeMovieFromCollection params and implemented remove button on movie-list component

--- a/src/app/profile/movie-list/movie-list.component.html
+++ b/src/app/profile/movie-list/movie-list.component.html
@@ -28,7 +28,9 @@
       </div>
 
       <div class="col-xs-1">
-        <button class="btn btn-danger btn-block">Remove</button>
+        <button type="button" class="btn btn-danger btn-block" (click)="removeMovie(movie)">
+          <span class="glyphicon glyphicon-remove"></span>
+        </button>
       </div>
     </div>
   </div>
