--- a/src/app/profile/movie-list/movie-list.component.html
+++ b/src/app/profile/movie-list/movie-list.component.html
@@ -3,6 +3,7 @@
       <h2 class="title">
         {{movies?.name}}
       </h2>
+      <small>{{movies?.description}}</small>
     </div>
 <div *ngFor="let movie of movies?.movieToMovieCollections" class="movie-wrapper">
   <div class="outlinedDiv">
@@ -28,9 +29,23 @@
       </div>
 
       <div class="col-xs-1">
-        <button type="button" class="btn btn-danger btn-block" (click)="removeMovie(movie)">
-          <span class="glyphicon glyphicon-remove"></span>
+        <button (click)="movieToRemove = movie" type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#myModal">
+          <span class="glyphicon glyphicon-minus"></span>
         </button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Would you like to remove this movie from this list?</h4>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button (click)="removeMovie()" type="button" class="btn btn-danger" data-dismiss="modal">Remove</button>
       </div>
     </div>
   </div>
