--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="row row-header">
-  <div class="col-sm-3"><p class="header-item" [routerLink]="['watchlists']" routerLinkActive="active-header">Watchlists</p></div>
-  <div class="col-sm-3"><p class="header-item" [routerLink]="['favorites']" routerLinkActive="active-header">Favorites</p></div>
+  <div class="col-sm-3"><p class="header-item" [routerLink]="['all-lists/' + watchlistId]" routerLinkActive="active-header">Watchlists</p></div>
+  <div class="col-sm-3"><p class="header-item" [routerLink]="['all-lists/' + favoritesId ]" routerLinkActive="active-header">Favorites</p></div>
   <div class="col-sm-3"><p class="header-item" [routerLink]="['all-lists']" routerLinkActive="active-header">All Lists</p></div>
   <div class="col-sm-3"><p class="header-item" [routerLink]="['ratings']" routerLinkActive="active-header"> Ratings &amp; Reviews</p></div>
 </div>
