--- a/src/app/profile/movie-list/movie-list.component.html
+++ b/src/app/profile/movie-list/movie-list.component.html
@@ -4,7 +4,13 @@
         {{movies?.name}}
       </h2>
       <small>{{movies?.description}}</small>
-    </div>
+  </div>
+  <div class="edit-list-div">
+    <button class="btn btn-primary edit-list" data-toggle="modal" data-target="#editListModal">
+      Edit List
+    </button>
+  </div>
+
 <div *ngFor="let movie of movies?.movieToMovieCollections" class="movie-wrapper">
   <div class="outlinedDiv">
     <div class="row">
@@ -36,18 +42,53 @@
     </div>
   </div>
 </div>
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Would you like to remove this movie from this list?</h4>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button (click)="removeMovie()" type="button" class="btn btn-danger" data-dismiss="modal">Remove</button>
+
+  <!-- Remove movie modal -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">Would you like to remove this movie from this list?</h4>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button (click)="removeMovie()" type="button" class="btn btn-danger" data-dismiss="modal">Remove</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+  <!-- Edit list modal -->
+  <div class="modal fade" id="editListModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" >Edit List</h4>
+        </div>
+        <form #listForm="ngForm">
+        <div class="modal-body">
+            <div class="form-group">
+              <label for="list-title" class="control-label">List Title:</label>
+              <input type="text" class="form-control" id="list-title"
+                     [readonly]="movies?.name === 'Favorites' || movies?.name === 'Watchlist'"
+                     required [ngModel]="movies?.name" name="title">
+            </div>
+            <div class="form-group">
+              <label for="list-description" class="control-label">Description:</label>
+              <textarea class="form-control" id="list-description" required [ngModel]="movies?.description" name="description"></textarea>
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button *ngIf="movies?.name !== 'Favorites' && movies?.name !== 'Watchlist'"
+                  type="button" class="btn btn-danger pull-left" data-dismiss="modal"
+                  (click)="deleteList()">Delete List</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">Discard</button>
+          <button [disabled]="!listForm.form.valid" (click)="onEditList(listForm)" type="button" class="btn btn-primary" data-dismiss="modal">Save Changes</button>
+        </div>
+      </form>
+      </div>
+    </div>
+  </div>
 </div>
