--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -52,6 +52,37 @@ input:focus{
   padding-left: 160px;
 }
 
+.search-results {
+  position: absolute;
+  z-index: 1;
+  min-height: 200px;
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05),
+   0 6px 20px 0 rgba(0, 0, 0, 0.05);
+}
+
+.results-header {
+  margin-left: 160px;
+  margin-bottom: 25px;
+}
+
+.trending-movie {
+  border-top: 1px solid rgb(241, 241, 241);
+  padding-top: 10px;
+}
+
+.trending-movie:hover {
+  background-color: rgba(211, 211, 211, 0.199);
+}
+
+.trending-movie-title {
+  margin-left: 20px;
+  font-family: 'Comfortaa', cursive;
+  font-size: medium;
+  display: inline-block;
+}
+
 .glyphicon-user {
   font-size: 10px;
 }
