--- a/src/app/profile/all-lists/all-lists.component.html
+++ b/src/app/profile/all-lists/all-lists.component.html
@@ -4,7 +4,7 @@
         <h2>My Movie Lists</h2>
 
       <div class="create-list">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#newListModal">Create New List</button>
+        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#newListModal">Create New List</button>
       </div>
       </div>
       <div *ngFor="let list of movieLists" [routerLink]="'../movie-list/' + list?.id" class=" img-container"
