--- a/src/app/movie-cards/movie-cards.component.css
+++ b/src/app/movie-cards/movie-cards.component.css
@@ -1,91 +1,88 @@
-.popularMovieContent {
-  padding-left: 10px;
-  padding-top: 30px;
+.section-header {
+  font-family: 'Comfortaa', cursive;
+  padding-left: 20px;
+  margin-bottom: 60px;
+}
+.flex-content {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   font-family: 'Comfortaa', cursive;
 }
 
-.Title {
-  margin-bottom: 40px;
-}
-
-.titleWord1{
-  color: rgb(69, 168, 69);
-}
-
-.titleWord2{
-  color: black;
-}
-
-.outlinedDiv {
-  border-radius: 0;
-  background-color: white;
-  min-height: 278px;
-  max-height: 278px;
-  min-width: 700px;
-  max-width: 700px;
-}
-
-.movie-wrapper {
-  float: left;
-  margin-right: 5px;
-  margin-bottom: 35px;
-
+.movie-container {
+  font-family: 'Comfortaa', cursive;
+  width: 700px;
+  height: 262px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 1fr 3fr);
+  grid-template-rows: repeat(auto-fill, 1fr 2fr 1fr);
+  grid-template-areas:
+  "img header header"
+  "img body body"
+  "img footer footer";
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05),
    0 6px 20px 0 rgba(0, 0, 0, 0.05);
+  margin-bottom: 10px;
+  margin-right: 0px;
 }
 
-.movieImg {
-
-  min-height: 325;
+.movie-img {
+  grid-area: img;
 }
 
-.movie-body-wrapper {
-  height: 200px;
-  max-height: 230px;
+.movie-header {
+  grid-area: header;
+  padding-left: 10px;
 }
 
-.movieTitle {
-  margin-bottom: 5px;
+.movie-body {
+  grid-area: body;
+  padding: 10px;
+  justify-self: center;
+  align-self: center;
+}
+
+.movie-footer {
+  grid-area: footer;
+  align-self: end;
+  padding-left: 20%;
+  padding-bottom: 10px;
+}
+.responsive {
+  width: 100%;
+  height: auto;
+  display: block;
+  max-height: 262px;
+  max-width: 182px;
+}
+
+.movie-title {
   font-size: 25px;
   font-family: 'Lato', sans-serif;
 }
 
-.releaseDate {
-  padding-bottom: 20px;
+.release-date {
   color: gray;
 }
 
-.movieDescription {
-  padding-right: 10px;
+.movie-description {
   font-size: 16px;
   color: rgb(102, 100, 100);
   font-family: 'Lato', sans-serif;
 }
 
-
 .more {
-  margin-top: 5px;
-  color: inherit
+  color: inherit;
+  width: 75%;
+
 }
 
 .more:focus {
   outline: 0;
 }
 
-.line {
-  margin-top: 0px;
-  height: 1px;
-  border: none;
-  background-color: lightgray;
-}
-
-.responsive {
-  width: 100%;
-  height: auto;
-  max-height: 273px;
-  max-width: 182px;
-}
-
-.paginationNumber {
-  color: rgb(26, 30, 39);
+.pagination:hover {
+  cursor: pointer;
 }
